# trufflepig

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
tests/: test_plugin.py
trufflepig/: plugin.py
